manifests/samba/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: samba
  namespace: samba
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: samba
  ingress:
  # Local network
  - fromCIDR:
    - ${network}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backup
  namespace: samba
spec:
  endpointSelector:
    matchLabels:
      k8upjob: "true"
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # Offsite backup
  - toFQDNs:
    - matchName: ${backuphost}
  # Metrics
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus-pushgateway
        app.kubernetes.io/name: prometheus-pushgateway
    toPorts:
    - ports:
      - port: "9091"
        protocol: TCP
